# version 0.62.1
08/07/2019
   - Added tests for public metadata response in search api (margaretha, 
     issue #43)
   - Disabled some tests of unused/disabled web-services (margaretha)
07/08/2019
   - Fixed missing scopes after requesting access token with refresh token 
     (margaretha)
   - Fixed post requests with status OK and empty body (margaretha)
07/08/2019
   - Resolved #40 (margaretha)   

# version 0.62
28/02/2019
   - Removed old VC controllers and updated tests (margaretha, issue #34)
   - Updated VC access controllers (margaretha)
19/03/2019
   - Added close index controller (margaretha)
11/04/2019
   - Fixed unknown authentication scheme, missing VC entity, and parameter 
     checker (margaretha)
   - Fixed sharing unknown VC, updating corpusQuery, and handling non-
     unique group name and unknown VC access (margaretha)
27/06/2019
   - Handled LDAP errors, fixed #45 (margaretha)
03/07/2019
   - Added re-caching VC at closing-index service, resolved #44 (margaretha)
   - Changed the response media-type of authentication controllers (margaretha)
   - Fixed bugs: allow guest to retrieve system VC, 
     remove VC from cache when it is deleted (margaretha)
04/07/2019
   - Updated VC name pattern and tests (margaretha)

# version 0.61.6
04/02/2019
   - Fixed SQL data and merged oauth2_client_url and oauth2_client (margaretha)
   - Updated client deregistration behavior (margaretha)
05/02/2019
   - Added delete-group-by-name controller (margaretha)
   - Added unique index to group name (margaretha)
06/02/2019
   - Updated a user setting test using array for multiple values (margaretha)
   - Added metadata controller tests (margaretha)
18/02/2019
   - Fixed tests (margaretha)
   - Updated handling errors from Koral (margaretha)
19/02/2019
   - Added fields to metadata controller (margaretha, issue #39)

# version 0.61.5
17/12/2018
   - Added a search timeout test (margaretha)
18/12/2018