@@ -8,7 +8,9 @@
      (margaretha)
    - Fixed post requests with status OK and empty body (margaretha)
 07/08/2019
-   - Resolved #40 (margaretha)   
+   - Resolved #40 (margaretha)
+15/08/2019
+   - Updated the response statuses of VC PUT requests (margaretha)   
 
 # version 0.62
 28/02/2019
